--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 /frontend/dist-ssr
 /frontend/*.local
 
+/frontend/.vite
+
 # Editor directories and files
 /frontend/.vscode/*
 !.vscode/extensions.json
