--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@uppy/react": "^4.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tiny-invariant": "^1.3.3",
-    "uppy": "^4.13.4"
+    "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
