--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rails/actioncable": "^8.0.200",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tiny-invariant": "^1.3.3"
