--- a/backend/config/database.yml
+++ b/backend/config/database.yml
@@ -18,8 +18,9 @@ default: &default
   socket: /tmp/mysql.sock
 
 development:
-  <<: *default
-  database: backend_development
+  primary: &primary_development
+    <<: *default
+    database: backend_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -58,10 +59,6 @@ production:
     <<: *primary_production
     database: backend_production_cache
     migrations_paths: db/cache_migrate
-  queue:
-    <<: *primary_production
-    database: backend_production_queue
-    migrations_paths: db/queue_migrate
   cable:
     <<: *primary_production
     database: backend_production_cable
