--- a/backend/config/deploy.yml
+++ b/backend/config/deploy.yml
@@ -53,6 +53,11 @@ env:
     # Log everything from Rails
     # RAILS_LOG_LEVEL: debug
 
+  RAILS_ENV: production
+  RAILS_MASTER_KEY: <%= ENV["RAILS_MASTER_KEY"] %>
+  DATABASE_URL: <%= ENV["DATABASE_URL"] %>
+  REDIS_URL: <%= ENV["REDIS_URL"] %>
+
 # Aliases are triggered with "bin/kamal <alias>". You can overwrite arguments on invocation:
 # "bin/kamal logs -r job" will tail logs from the first server in the job section.
 aliases:
