--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -33,6 +33,8 @@ gem 'rack-cors'
 # Use Rack Attack for throttling and file size limits
 gem 'rack-attack'
 
+gem 'delayed_job_active_record'
+
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem 'debug', platforms: %i[mri windows], require: 'debug/prelude'
@@ -43,7 +45,6 @@ group :development, :test do
   gem 'rubocop', '~> 1.75'
 
   # Omakase Ruby styling [https://github.com/rails/rubocop-rails-omakase/]
+  gem 'byebug', '~> 12.0'
   gem 'rubocop-rails-omakase'
 end
-
-gem "byebug", "~> 12.0"
