--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -2,8 +2,8 @@ source 'https://rubygems.org'
 
 # Bundle edge Rails instead: gem "rails", github: "rails/rails", branch: "main"
 gem 'rails', '~> 8.0.2'
-# Use mysql as the database for Active Record
-gem 'mysql2', '~> 0.5'
+# Use postgresql as the database for Active Record
+gem 'pg'
 # Use the Puma web server [https://github.com/puma/puma]
 gem 'puma', '>= 5.0'
 # Build JSON APIs with ease [https://github.com/rails/jbuilder]
@@ -34,6 +34,10 @@ gem 'rack-cors'
 gem 'rack-attack'
 
 gem 'delayed_job_active_record'
+gem 'daemons'
+
+# Use Solid Cache for durable caching
+# gem 'solid_cache'
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
@@ -52,3 +56,5 @@ group :development, :test do
 end
 
 gem 'cloudinary', '~> 2.3'
+
+gem 'dockerfile-rails', '>= 1.7', group: :development
