--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -60,3 +60,5 @@ gem 'cloudinary', '~> 2.3'
 gem 'dockerfile-rails', '>= 1.7', group: :development
 
 gem "httpparty", "~> 0.2.0"
+
+gem "pagy", "~> 9.3"
